# swarm-orchestrator-mcp

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  ai.txt  benchmark_search.py  dashboard_server.py  docker-compose.yml  orchestrator.py  project_profile.json  pyproject.toml  reproduce_profile.json  reproduction.py  requirements.txt  server.py  test_active_governance.py  test_merge_debug.py  test_symbol_detection.py  v3.0_notes.md
.agent/: tool_definitions_check.json
.github/: labeler.yml
.github/workflows/: ci.yml  copilot-review.yml  docker-publish.yml  release.yml
dashboard/: README.md  package-lock.json  package.json
dashboard/src/: App.css  App.jsx  mockData.js
docs/ai/: agent-guide.md  examples.md  tool-reference.md
docs/archive/: IMP_MCP_MEMORY_MIGRATION.md
docs/human/: api-reference.md  configuration.md  getting-started.md  performance.md  user-guide.md  workers.md
examples/mcp-configs/: README.md  antigravity_config.json  claude_desktop_config.json  claude_desktop_local.json  cursor_settings.json  gemini_cli_config.yaml
mcp_core/: git_helpers.py  github_mcp_client.py  llm.py  orchestrator_loop.py  postgres_client.py  search_engine.py  swarm_schemas.py  worker_prompts.py
reproduction_scripts/: test_git_worker_e2e.py
scripts/: migrate_archive.py  migrate_error_log.py  publish_changes.py
templates/: agent_response_schema.py
tests/: test_deliberate_verbosity.py  test_github_mcp_client.py  test_memory_isolation.py  test_rpc.py  test_signatures.py  test_skills_execution.py  test_vector_archive.py
(+45 files in other folders)
